force-app/main/default/objects/National_Outings_Trip_Comments__c/National_Outings_Trip_Comments__c.object-meta.xml
<CustomObject>
    <label>National Outings Trip Comments</label>
    <nameField>
        <displayFormat>NOTC-{00000000}</displayFormat>
        <label>National Outings Trip Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Outings Trip Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>