force-app/main/default/objects/National_Outings_Trip_Comments__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>