force-app/main/default/objects/National_Outings_Trip_Comments__c/fields/Notify_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Notify_Approvers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Approvers</label>
    <type>Checkbox</type>
</CustomField>