force-app/main/default/objects/National_Outings_Trip_Comments__c/fields/Notify_Creators__c.field-meta.xml
<CustomField>
    <fullName>Notify_Creators__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Creators</label>
    <type>Checkbox</type>
</CustomField>