force-app/main/default/objects/National_Outings_Trip_Comments__c/fields/Notify_Staff__c.field-meta.xml
<CustomField>
    <fullName>Notify_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Staff</label>
    <type>Checkbox</type>
</CustomField>